--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://github.com/HungND1701/HungND1701.github.io/blob/master/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main id="main">
